Refact the RoCrateManager